# Obj_Pro_2

./: CMakeLists.txt  README.md
src/: Biblioteka.h  Studentas.h  funkcijos.cpp  funkciju_bib.h  v1.0_obj.cpp  v1.1_obj.cpp  v1.2_obj.cpp  v1.5_obj.cpp
